--- a/styles.css
+++ b/styles.css
@@ -37,18 +37,46 @@ h1 {
     text-align: center;
 }
 
-.view-button, .vis-button {
+#chart-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px auto;
+    padding: 40px;
+    border: 1px solid #ccc; /* Optional: Add a border for better visualization */ 
+   
+}
+
+#chart {
+    display: flex;
+    justify-content: center; /* Center the SVG horizontally */
+    align-items: center; /* Center the SVG vertically */
+  
+}
+
+#button-container {
+    display: flex;
+   
+  
+}
+.vis-button,.view-button {
     background-color: #4CAF50;
     color: white;
     border: none;
-    padding: 14px 20px;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
     font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
     cursor: pointer;
-    margin: 10px;
 }
 
-.view-button:hover, .vis-button:hover {
-    background-color: #45a049;
+.vis-button:hover, .view-button:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid #4CAF50;
 }
 
 #main-nav {
