--- a/styles.css
+++ b/styles.css
@@ -37,27 +37,22 @@ h1 {
     text-align: center;
 }
 
+
 #chart-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px auto;
-    padding: 40px;
-    border: 1px solid #ccc; /* Optional: Add a border for better visualization */ 
-   
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 #chart {
-    display: flex;
-    justify-content: center; /* Center the SVG horizontally */
-    align-items: center; /* Center the SVG vertically */
-  
+    width: 100%;
+    height: 90%; /* Adjust as needed */
 }
 
 #button-container {
-    display: flex;
-   
-  
+    position: absolute;
+    top: 10px; /* Adjust as needed */
+    right: 10px; /* Adjust as needed */
 }
 .vis-button,.view-button {
     background-color: #4CAF50;
