--- a/styles.css
+++ b/styles.css
@@ -110,54 +110,21 @@ h1 {
     color: black;
 }
 
-/* Dropdown container */
-.dropdown {
-    float: left;
-    overflow: hidden;
+#radio-group {
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+    background-color: #333;
 }
 
-.dropdown .dropbtn {
-    font-size: 16px;  
-    border: none;
-    outline: none;
-    color: white; /* Match the navbar text color */
-    padding: 14px 20px; /* Match the navbar padding */
-    background-color: #333; /* Match the navbar background color */
-    font-family: inherit;
-    margin: 0 10px; /* Match the navbar button margin */
-    cursor: pointer;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color:  #333;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    float: none;
+#radio-group label {
     color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
+    margin: 0 10px;
 }
 
-.dropdown-content a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown:hover .dropbtn {
-    background-color: #ddd;
-    color: black;
+#radio-group input {
+    margin-right: 5px;
+    
 }
 
 #chart {
