--- a/styles.css
+++ b/styles.css
@@ -39,21 +39,43 @@ h1 {
 
 
 #chart-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin: 20px auto;
+    padding: 20px;
 }
 
 #chart {
-    width: 100%;
+    width: 70%;
     height: 90%; /* Adjust as needed */
 }
 
-#button-container {
-    position: absolute;
-    top: 10px; /* Adjust as needed */
-    right: 10px; /* Adjust as needed */
+#side-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 30%;
 }
+
+#button-container {
+    align-self: center; /* Align button container to the end (right) */
+    margin-bottom: 9px; /* Space between button and text container */
+}
+
+#text-container {
+    width: 80%;
+    align-self: center;
+   /* height: 300px; /* Adjust as needed */
+    padding: 10px 10px 20px 20px; /* Reduced top padding */
+    background-color: white;
+    transition: opacity 0.5s ease;
+    /*border: 1px solid #000000;*/
+}
+#text-container p {
+    font-size: 12px; /* Adjust the font size as needed */
+}
+
 .vis-button,.view-button {
     background-color: #4CAF50;
     color: white;
