--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,10 @@ h1 {
     margin-top: 20px;
 }
 
+h2 {
+    text-align: center;
+    margin-top: 20px;
+}
 .intro-text {
     text-align: center;
     width: 80%;
@@ -35,8 +39,53 @@ h1 {
 
 .center {
     text-align: center;
+    margin: 20px 0;
+}
+main {
+    flex: 1;
 }
 
+#image-container {
+    display: flex;
+    justify-content: center; /* Centers the images horizontally */
+    gap: 20px; /* Adds space between the images */
+}
+#image-container img {
+    width: 45%; /* Sets the width of the images */
+    height: auto; /* Sets the height of the images */
+}
+
+footer {
+    background-color: #f1f1f1;
+    padding: 15px;
+    text-align: center;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    display: flex;  
+    justify-content: space-around;
+    box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
+    margin-top: 80px; /* Increased margin to create space between footer and section above */
+    font-size: 20px; /* Smaller font size */
+}
+
+.footer-section {
+    margin: 2px;
+}
+
+.footer-section h5 {
+    margin-top: 0;
+    font-size: 15px; /* Font size for the headings */
+}
+
+.footer-section p {
+    margin: 2px 0;
+    font-size: 10px; /* Smaller font size for contents */
+}
+
+.unit-info p {
+    margin: 2px 0; /* Reduce space between points */
+}
 
 #chart-container {
     display: flex;
