--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,9 @@ footer {
     align-items: flex-start;
     margin: 20px auto;
     padding: 20px;
+    height: auto; /* Set height to auto to fit content */
+    max-height: 350px; /* Optionally set a maximum height */
+    
 }
 
 #chart {
@@ -281,14 +284,15 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20px 0;
+ 
+    margin: 20px 0 50px 0; /* Adjust margins to move the slider up */
 }
 
 #slider-container {
     display: flex;
     align-items: center;
     gap: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 #slider-container label {
